# interview_analyser

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/workflows/: tests.yml
config/: config.yaml
docs/: consent.md  diarization_setup.md  feedback_and_confidence.md  language_support.md  macos_setup.md  run_at_startup.md  using_cloud_apis.md
scripts/: create_shortcut.ps1
src/interview_analyzer/: analyzer.py  api_keys.py  app.py  auth.py  cleanup.py  compress.py  confidence.py  config_loader.py  consent.py  control_panel.py  dashboard.py  db.py  engines.py  infographic.py  language_packs.py  live_transcribe.py  login_dialog.py  model_setup.py  profile_confirm.py  profiles.py  recorder.py  remembered_login.py  report.py  report_view.py  rubric.py  settings_editor.py  single_instance.py  transcriber.py  tray.py  watcher.py
tests/: run_tests.py  test_analyzer.py  test_api_keys.py  test_app.py  test_auth.py  test_cleanup.py  test_confidence.py  test_dashboard_history.py  test_dashboard_logic.py  test_db.py  test_detection.py  test_end_to_end.py  test_infographic.py  test_language_packs.py  test_live_transcribe.py  test_model_setup.py  test_profile_confirm.py  test_profiles.py  test_recorder.py  test_remembered_login.py  test_report.py  test_report_view.py  test_reprocess.py  test_rubric.py  test_settings_editor.py  test_single_instance.py  test_transcriber.py  test_tray.py  test_watcher_live_transcription.py  test_watcher_profiles.py  test_watcher_status.py
