[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-analyzer"
version = "0.1.0"
description = "Auto-records interview calls, transcribes and analyzes them locally, and produces structured feedback reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
